welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:15: error: not found: value seCouleurBrosse
	seCouleurBrosse(T(H-i))
        ^